<resources>
    <string name="app_name">Firebase Practice</string>
    <string name="key_text">Key!</string>
    <string name="key_hint">Type key here</string>
    <string name="value_text">Value!</string>
    <string name="value_hint">Type value here</string>
    <string name="btn_write">Write to cloud</string>
    <string name="btn_read">Read from cloud</string>
    <string name="no_key_text">Cannot find key</string>
    <string name="failure_text">A failure occurred</string>
</resources>
